--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <main class="visas-turinys">
         <div class="kaire">
             <h1>Sign up</h1>
