--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="shortcut icon" href="./h.png" type="image/png">
+    <title>Sign in</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="shortcut icon" href="../h.png" type="image/png">
 </head>
 
 <body>
     <div class="background"></div>
     <main class="visas-turinys">
         <div class="kaire">
-            <h1>Sign up</h1>
+            <h1>Sign in</h1>
             <footer class="apatiniai-linkai">
                 <a href="#">Privacy policy</a>
                 <span>&</span>
@@ -27,19 +27,12 @@
                         <label for="Username">Username</label>
                         <input id="Username" type="text" placeholder="Your Username" required></div>
                     <div class="form-row">
-                        <label for="email">Email</label>
-                        <input class="input1" id="email" type="text" placeholder="Your Email" required></div>
-                    <div class="form-row">
                         <label for="">Password</label>
                         <input type="password" placeholder="Your password" required></div>
                     <div class="form-row">
-                        <label for="">Repeat Password</label>
-                        <input type="password" placeholder="Repeat Your password" required></div>
-                    <div class="form-row">
-                        <button type="submit">Get started</button>
+                        <button type="submit">Login</button>
                         <span>or</span>
-                        <a href="../sign-in/">Sign in</a>
-                    </div>
+                        <a href="../forgot-password/">Forgot password?</a>
                 </form>
         </div>
     </main>
